feat: add system theme config

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@storybook/nextjs": "^8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -50,9 +50,10 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
     "plop": "^4.0.1",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "storybook": "^8.6.12",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5",
     "typescript-eslint": "^8.28.0"
   },
