--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
+    "mock-match-media": "^0.4.3",
     "plop": "^4.0.1",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
